...
            description: '123-XXXX-1234',
          ),
          const SizedBox(height: 20),


          DetailedButton(
            text: 'Profile',
            iconLeft: const Icon(
              Icons.settings_rounded,
              color: AppColors.surfaceSecondaryContrast,
            ),
            iconRight: const Icon(
              Icons.arrow_forward_ios_rounded,
...
            }
          ),
          const SizedBox(height: 8),


          DetailedButton(
            text: 'Email Password',
            iconLeft: const Icon(
              Icons.info_outline_rounded,
              color: AppColors.surfaceSecondaryContrast,
            ),
            iconRight: const Icon(
              Icons.arrow_forward_ios_rounded,
...
