...
          // Next Button
          ElevatedButton(
            onPressed: () {
              Navigator.pushNamed(context, '/transactions/confirmation');
            },
            child: const Text(
              'Next',
              style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
            ),
          ),
        ],
      ),
    );
...
